added styling and placeholders

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -6458,14 +6458,20 @@
 <div class="page5tab">
     <hr>
     <fieldset class="repeating_bonds">
-        <input type="text" class="sheet-border-bottom sheet-bond-name" name="attr_bond-name" placeholder="Name">
-        <input type= "checkbox" class="sheet-show-bond-info" name="attr_bond-show">
-        <span class="sheet-show-bond-info">More Info</span>
-        <div class="sheet-show-bond-info sheet-hidden-flex">
-            <input class="sheet-bond-location sheet-border-bottom" name="attr_bond-location" placeholder="Location">
-            <input class="sheet-bond-descriptors sheet-border-bottom" name="attr_bond-descriptors" placeholder="Descriptors">
-            <h4>Notes:</h4>
-            <textarea class="sheet-bond-notes" name="attr_bond-notes"></textarea>
+        <div class="sheet-bond-container">
+            <p class="sheet-bond-title">Name:</p><input type="text" class="sheet-border-bottom sheet-bond-name" name="attr_bond-name" placeholder="Name">
+            <input type= "checkbox" class="sheet-show-bond-info" name="attr_bond-show" placeholder="Name">
+            <span class="sheet-show-bond-info">More Info</span>
+            <div class="sheet-show-bond-info sheet-hidden-flex">
+                <div class="sheet-full-width">
+                        <p class="sheet-bond-title">Location:</p><input type="text" class="sheet-bond-location sheet-border-bottom" name="attr_bond-location" placeholder="Location">
+                </div>
+                <div class="sheet-full-width">
+                        <p class="sheet-bond-title">Descriptors:</p><input type="text" class="sheet-bond-descriptors sheet-border-bottom" name="attr_bond-descriptors" placeholder="Descriptors">
+                </div>
+                <p class="sheet-bond-title sheet-bond-notes-title">Notes</p>
+                <textarea class="sheet-bond-notes" name="attr_bond-notes"></textarea>
+            </div>
         </div>
     </fieldset>
 </div>
