--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -5,7 +5,9 @@
 	<input type="hidden" name="attr_languages_points" value="0" />
 	<input type="hidden" name="attr_cf_points" value="0" />
 	<input type="hidden" name="attr_advantages_points" value="0" />
+	<input type="hidden" name="attr_advantages_perks" value="0" />
 	<input type="hidden" name="attr_disadvantages_points" value="0" />
+	<input type="hidden" name="attr_advantages_quirks" value="0" />
 	<input type="hidden" name="attr_racial_points" value="0" />
 	<input type="hidden" name="attr_skills_points" value="0" />
 	<input type="hidden" name="attr_techniques_points" value="0" />
@@ -25,6 +27,7 @@
 					<li>Combat tab. Added Demolition combat tool. Code provided by Savage. Thank you Savage!</li>
 					<li>Combat tab - Thrown Object tool. Thrust damage was not updating correctly when thrust damage changed.</li>
 					<li>General tab. Added whisper to GM option for Perception roll.</li>
+					<li>Traits tab. Added repeating tables for Perks and Quirks.</li>
 					<li>See Updates tab for more detailed information.</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
@@ -2142,7 +2145,7 @@
 		<div class="sheet-box sheet-traits">
 			<div class="sheet-table">
 				<div class="sheet-header">
-					<div class="sheet-cell sheet-col0">Advantages (& Perks)</div>
+					<div class="sheet-cell sheet-col0">Advantages</div>
 					<div class="sheet-cell sheet-col1">
 						<div class="sheet-popup">FOA</div>
 						<span class="sheet-tooltip">
@@ -2196,12 +2199,72 @@
 		</div> <!-- .sheet-box .sheet-traits -->
 
 
+		<!-- _____ _____ PERKS BOX _____ _____ -->
+		<!-- this box uses the identifier "traits" for backwards compatibility -->
+
+		<div class="sheet-box sheet-traits">
+			<div class="sheet-table">
+				<div class="sheet-header">
+					<div class="sheet-cell sheet-col0">Perks</div>
+					<div class="sheet-cell sheet-col1">
+						<div class="sheet-popup">FOA</div>
+						<span class="sheet-tooltip">
+							Frequency of Appearance
+							<br />
+							<table>
+								<tbody>
+									<tr><td>15 or less><td></td>
+									<tr><td>12 or less><td></td>
+									<tr><td>9 or less><td></td>
+									<tr><td>6 or less><td></td>
+								</tbody>
+							</table>
+						</span>
+					</div>
+					<div class="sheet-cell sheet-col2"></div>
+					<div class="sheet-cell sheet-col3">Pts</div>
+					<div class="sheet-cell sheet-col4">Ref</div>
+				</div> <!-- .sheet-header -->
+				<fieldset class="repeating_perks">
+					<input class="sheet-toggle" type="checkbox" title="Click to show/hide more information." name="attr_perks_toggle_notes" />
+					<span class="sheet-checkbox"></span>
+					<div class="sheet-row sheet-row-stats">
+						<div class="sheet-cell sheet-col0">
+							<input type="text" name="attr_name" title="Macro table name: repeating_perks. Field name: name" />
+						</div>
+						<div class="sheet-cell sheet-col1">
+							<input type="number" name="attr_foa" title="Macro table name: repeating_perks. Field name: foa" />
+						</div>
+						<div class="sheet-cell sheet-col2">
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Frequency of Appearance Check}} {{activeDefense=[[0]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{foa} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsAFOA" />
+						</div>
+						<div class="sheet-cell sheet-col3">
+							<input type="number" name="attr_points" title="Macro table name: repeating_perks. Field name: points" />
+						</div>
+						<div class="sheet-cell sheet-col4">
+							<input type="text" name="attr_ref" title="Macro table name: repeating_perks. Field name: ref" />
+						</div>
+					</div> <!-- .sheet-row -->
+					<div class="row row-details notebox">
+						<div class="cell col-notebox">
+						    <div class="show-notes">
+						        <input type="checkbox" name="attr_show_notes" value="1" />
+						        <span class="label">Show notes below, in roll template</span>
+						    </div>
+						    <textarea name="attr_notes" title="Macro table name: repeating_perks. Field name: notes"></textarea>
+						</div>
+					</div> <!-- .sheet-row -->
+				</fieldset> <!-- .repeating_perks -->
+			</div> <!-- .sheet-table -->
+		</div> <!-- .sheet-box .sheet-traits -->
+
+
 		<!-- _____ _____ DISADVANTAGES BOX _____ _____ -->
 
 		<div class="sheet-box sheet-disadvantages">
 			<div class="sheet-table">
 				<div class="sheet-header">
-					<div class="sheet-cell sheet-col0">Disadvantages (& Quirks)</div>
+					<div class="sheet-cell sheet-col0">Disadvantages</div>
 					<div class="sheet-cell sheet-col1">
 						<div class="sheet-popup">SCN</div>
 						<span class="sheet-tooltip">
@@ -2250,6 +2313,66 @@
 						        <span class="label">Show notes below, in roll template</span>
 						    </div>
 						    <textarea name="attr_notes" title="Macro table name: repeating_disadvantages. Field name: notes"></textarea>
+						</div>
+					</div> <!-- .sheet-row -->
+				</fieldset> <!-- .repeating_disadvantages -->
+			</div> <!-- .sheet-table -->
+		</div> <!-- .sheet-box .sheet-disadvantages -->
+
+        <!-- _____ _____ QUIRKS BOX _____ _____ -->
+
+		<div class="sheet-box sheet-disadvantages">
+			<div class="sheet-table">
+				<div class="sheet-header">
+					<div class="sheet-cell sheet-col0">Quirks</div>
+					<div class="sheet-cell sheet-col1">
+						<div class="sheet-popup">SCN</div>
+						<span class="sheet-tooltip">
+							Self-control Number OR
+							<br />
+							Frequency of Appearance
+							<br />							
+							<table>
+								<tbody>
+									<tr><td>15 or less</td></tr>
+									<tr><td>12 or less</td></tr>
+									<tr><td>9 or less</td></tr>
+									<tr><td>6 or less</td></tr>
+								</tbody>
+							</table>
+						</span>
+					</div>
+					<div class="sheet-cell sheet-col2"></div>
+					<div class="sheet-cell sheet-col3">Pts</div>
+					<div class="sheet-cell sheet-col4">Ref</div>	
+				</div> <!-- .sheet-header -->
+				<fieldset class="repeating_quirks">
+					<input class="sheet-toggle" type="checkbox" title="Click to show/hide more information." name="attr_quirks_toggle_notes" />
+					<span class="sheet-checkbox"></span>
+					<div class="sheet-row sheet-row-stats">
+						<div class="sheet-cell sheet-col0">
+							<input type="text" name="attr_name" title="Macro table name: repeating_quirks. Field name: name" />
+						</div>
+						<div class="sheet-cell sheet-col1">
+							<input type="number" name="attr_control_rating" title="Macro table name: repeating_quirks. Field name: control_rating" />
+						</div>
+						<div class="sheet-cell sheet-col2">
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Self-control Check}} {{activeDefense=[[0]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{control_rating} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsDSCR" />
+						</div>
+						<div class="sheet-cell sheet-col3">
+							<input type="number" name="attr_points" title="Macro table name: repeating_quirks. Field name: points" />
+						</div>
+						<div class="sheet-cell sheet-col4">
+							<input type="text" name="attr_ref" title="Macro table name: repeating_quirks. Field name: ref" />
+						</div>
+					</div> <!-- .sheet-row -->
+					<div class="sheet-row sheet-row-details notebox">
+						<div class="cell col-notebox">
+						    <div class="show-notes">
+						        <input type="checkbox" name="attr_show_notes" value="1" />
+						        <span class="label">Show notes below, in roll template</span>
+						    </div>
+						    <textarea name="attr_notes" title="Macro table name: repeating_quirks. Field name: notes"></textarea>
 						</div>
 					</div> <!-- .sheet-row -->
 				</fieldset> <!-- .repeating_disadvantages -->
@@ -4588,6 +4711,7 @@
 		<li>Inventory tab - Grand Total Weight. Changed to use <b>on</b> change event.</li>
 		<li>General tab - Custom Pools section. Added some height to Current text box so underline is visible.</li>
 		<li>General tab. Added whisper to GM option for Perception roll.</li>
+		<li>Traits tab. Added repeating tables for Perks and Quirks.</li>
 	</ul>
 	
 	<h4>Vesion: 1.7.2</h4>
@@ -6455,10 +6579,24 @@ Skull Damage x4
 		});
 	});
 
+	// Update the total cost of Perks
+	on('change:repeating_perks:points remove:repeating_perks', function (e) {
+		sumRepeating('repeating_perks', 'points', function(v) {
+			setAttrs({ advantages_perks: v });
+		});
+	});
+
 	// Update the total cost of Disadvantages
 	on('change:repeating_disadvantages:points remove:repeating_disadvantages', function (e) {
 		sumRepeating('repeating_disadvantages', 'points', function(v) {
 			setAttrs({ disadvantages_points: v });
+		});
+	});
+
+	// Update the total cost of Quirks
+	on('change:repeating_quirks:points remove:repeating_quirks', function (e) {
+		sumRepeating('repeating_quirks', 'points', function(v) {
+			setAttrs({ advantages_quirks: v });
 		});
 	});
 
