updated size difference for page 2 label

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -52,7 +52,6 @@
     </tr>
 </table>
 
-<!-- <div class="sheet-page-container"> -->
 <input type="radio" class="sheet-pages sheet-page1" name="attr_pagenumber" title="Page 1"
     value="1" />
 <span class="sheet-page-label sheet-page-label-1">Character Sheet</span>
@@ -62,17 +61,16 @@
 <span class="sheet-page-label sheet-page-label-2">Progress</span>
 
 <input type="radio" class="sheet-pages sheet-page3" name="attr_pagenumber" title="Page 3"
-    value="3" />
+value="3" />
 <span class="sheet-page-label sheet-page-label-3">Assets</span>
-<!-- </div> -->
 
-<input type="radio" class="sheet-pages sheet-page4 sheet-hidden" id="page4" name="attr_pagenumber" title="Page 4"
-    value="4" />
-<label class="sheet-page-label" for="page4">Oracles</label>
+<input type="radio" class="sheet-pages sheet-page4" name="attr_pagenumber" title="Page 4"
+value="4" />
+<span class="sheet-page-label sheet-page-label-4">Oracles</span>
 
-<input type="radio" class="sheet-pages sheet-page5 sheet-hidden" id="page5" name="attr_pagenumber" title="Page 5"
+<input type="radio" class="sheet-pages sheet-page5" name="attr_pagenumber" title="Page 5"
     value="5" />
-<label class="sheet-page-label" for="page5">Bonds</label>
+<span class="sheet-page-label sheet-page-label-5">Bonds</span>
 
 <div class="page1tab">
     <hr>
