fixed momentum burn to use span rather than label

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -73,9 +73,9 @@
         <tr>
             <td class="sheet-momentum" width="10%">
                 <div class="sheet-momentum-burn">
-                    <input type="checkbox" class="sheet-checkbox" title="Burn Momentum"
+                    <input type="checkbox" class="sheet-momentum-burn" title="Burn Momentum"
                         name="attr_momentumBurn"></input>
-                    <span class="sheet-momentum-burn" for="burnMomentum">Burn</span>
+                    <span class="sheet-momentum-burn">Burn</span>
                 </div>
                 <div class="sheet-momentum-box">
                     <h3>+10</h3>
@@ -10441,6 +10441,15 @@ on('change:repeating_assets:assetDropdownRitual', function(values) {
     setAttrs({
         ['repeating_assets_AssetRitualDiv' + values.previousValue]: 'off',
         ['repeating_assets_AssetRitualDiv' + values.newValue]: 'on'
+    });
+});
+
+on('change:momentumBurn', function() {
+    getAttrs([ "momentum_reset" ], function(values) {
+        setAttrs({
+            momentum: parseInt(values.momentum_reset),
+            momentumBurn: 'off'
+        });
     });
 });
 </script>
