moved cutom asset ticks to new table

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -866,9 +866,12 @@
                                     <h5>Leech</h5>
                                 </td>
                             </tr>
+                        </table>
+                        <table width="6%"></table>
+                        <table width="47%">
                             <tr>
                                 <td colspan="4">
-                                    <h4 class="sheet-heading-left">OTHER
+                                    <h4 class="sheet-heading-left">Custom Assets
                                     </h4>
                                 </td>
                             </tr>
@@ -877,13 +880,13 @@
                                         name="attr_debilOtherA"><span></span>
                                 </td>
                                 <td width="40%">
-                                    <h5>Other</h5>
+                                    <h5>Custom 1</h5>
                                 </td>
                                 <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
                                         name="attr_debilOtherB"><span></span>
                                 </td>
                                 <td width="40%">
-                                    <h5>Other</h5>
+                                    <h5>Custom 2</h5>
                                 </td>
                             </tr>
                         </table>
