fixed custom debilities

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -775,13 +775,13 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
                                         name="attr_debilWounded"><span></span>
                                 </td>
                                 <td width="40%">
                                     <h5>Wounded</h5>
                                 </td>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
                                         name="attr_debilShaken"><span></span>
                                 </td>
                                 <td width="40%">
@@ -789,13 +789,13 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
                                         name="attr_debilUnprepared"><span></span>
                                 </td>
                                 <td width="40%">
                                     <h5>Unprepared</h5>
                                 </td>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
                                         name="attr_debilEncumbered"><span></span>
                                 </td>
                                 <td width="40%">
@@ -812,13 +812,13 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
                                         name="attr_debilMarked"><span></span>
                                 </td>
                                 <td width="40%">
                                     <h5>Cursed</h5>
                                 </td>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
                                         name="attr_debilHaunted"><span></span>
                                 </td>
                                 <td width="40%">
@@ -832,13 +832,13 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
                                         name="attr_debilMaimed"><span></span>
                                 </td>
                                 <td width="40%">
                                     <h5>Maimed</h5>
                                 </td>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
                                         name="attr_debilCorrupted"><span></span>
                                 </td>
                                 <td width="40%">
@@ -853,13 +853,13 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
                                         name="attr_debilOathbreaker"><span></span>
                                 </td>
                                 <td width="40%">
                                     <h5>Oathbreaker</h5>
                                 </td>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
                                         name="attr_debilLeech"><span></span>
                                 </td>
                                 <td width="40%">
@@ -876,14 +876,14 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
-                                        name="attr_debilOtherA"><span></span>
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
+                                        name="attr_debilCustom1"><span></span>
                                 </td>
                                 <td width="40%">
                                     <h5>Custom 1</h5>
                                 </td>
-                                <td width="10%"><input type="checkbox" class="sheet-checkbox sheet-checkbox"
-                                        name="attr_debilOtherB"><span></span>
+                                <td width="10%"><input type="checkbox" class="sheet-checkbox"
+                                        name="attr_debilCustom2"><span></span>
                                 </td>
                                 <td width="40%">
                                     <h5>Custom 2</h5>
@@ -10338,9 +10338,9 @@
 <!-- Sheet workers -->
 <script type="text/worker">
 // Debilities update Momentum MAX and RESET.
-on('change:debilWounded change:debilShaken change:debilUnprepared change:debilEncumbered change:debilMarked change:debilHaunted change:debilMaimed change:debilCorrupted change:debilOathbreaker change:debilLeech change:debilOtherA change:debilOtherB', function() {
+on('change:debilWounded change:debilShaken change:debilUnprepared change:debilEncumbered change:debilMarked change:debilHaunted change:debilMaimed change:debilCorrupted change:debilOathbreaker change:debilLeech change:debilCustom1 change:debilCustom2', function() {
     var numDebilities=0
-    getAttrs(["debilWounded","debilShaken", "debilUnprepared", "debilEncumbered", "debilMarked", "debilHaunted", "debilMaimed", "debilCorrupted", "momentum_max", "momentum_reset"], function(values) {
+    getAttrs(["debilWounded","debilShaken", "debilUnprepared", "debilEncumbered", "debilMarked", "debilHaunted", "debilMaimed", "debilCorrupted", "debilOathbreaker", "debilLeech", "debilCustom1", "debilCustom2", "momentum_max", "momentum_reset"], function(values) {
         if(values.debilWounded == "on") numDebilities=numDebilities+1;
         if(values.debilShaken == "on") numDebilities=numDebilities+1;
         if(values.debilUnprepared == "on") numDebilities=numDebilities+1;
@@ -10349,6 +10349,10 @@ on('change:debilWounded change:debilShaken change:debilUnprepared change:debilEn
         if(values.debilHaunted == "on") numDebilities=numDebilities+1;
         if(values.debilMaimed == "on") numDebilities=numDebilities+1;
         if(values.debilCorrupted == "on") numDebilities=numDebilities+1;
+        if(values.debilOathbreaker == "on") numDebilities=numDebilities+1;
+        if(values.debilLeech == "on") numDebilities=numDebilities+1;
+        if(values.debilCustom1 == "on") numDebilities=numDebilities+1;
+        if(values.debilCustom2 == "on") numDebilities=numDebilities+1;
         setAttrs({ momentum_max: (10 - numDebilities)});
         if (numDebilities===0) setAttrs({ momentum_reset: 2});
         if (numDebilities===1) setAttrs({ momentum_reset: 1});
