Wild die for Street Cred Three
Now can change the wild die for street cred from IZ 3

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -8297,6 +8297,7 @@
     			        <!--Strain IZ 2.0--><label class="sheet-dsItem" data-i18n-title="strain-text" title="Used to measure how much strain a character is under due to augmentation from bioware. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStrain" style="width: 15px;" name="attr_izStrain" /><span data-i18n="strain">Strain</span></label>
 						<!--Street Cred IZ 2.0--><label class="sheet-dsItem" data-i18n-title="street-cred-text" title="Used to measure a character's reputation on the streets. Base = 2 per Character Rank. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStreetCred" style="width: 15px;" name="attr_izStreetCred" /><span data-i18n="street-cred">Street Cred</span></label>
 						<!--Street Cred IZ 3.0--><label class="sheet-dsItem" data-i18n-title="street-cred-three-text" title="Used to measure a character's general reputation and credibility. This field is a die to work with Interface Zero 3.0"><input type="checkbox" class="sheet-useStreetCredThree" style="width: 15px;" name="attr_izStreetCredThree" /><span data-i18n="street-cred">Street Cred</span></label>
+						<input type="checkbox" class="sheet-optional sheet-useStreetCredThree" style="width: 15px;" name="attr_izStreetCredThree" />
 						<div class="sheet-srmItem sheet-showstreetcredthreewilddie">
                             <select name="attr_streetcredthreewilddie" title="@{streetcredthreewilddie}" class="sheet-traitdie">
                                 <option value="4">d4</option>
@@ -8305,7 +8306,7 @@
                                 <option value="10">d10</option>
                                 <option value="12">d12</option>
                             </select>
-                            <input type='text' class='sheet-ModDesc' name='attr_streetcredthreewilddieinfo' data-i18n="street-cred-three-wild-die-type" />
+                            <input type='text' class='sheet-ModDesc' name='attr_streetcredthreewilddieinfo' placeholder="Set the wild die for Street Cred" data-i18n-placeholder="street-cred-three-wild-die-type" />
                         </div>
     			    </div>
     			</div>
