--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -1,14 +1,7 @@
 <input type='hidden' name='attr_character_sheet' value='Savage Worlds Tabbed v3.89' />
 <script type="text/worker">
  
-    /*----- Things I need to Care For -----
-    -- o Option to ignore encumbrance    --
-    -- o Add a Strain config so the      --
-    --   the config section houses the   --
-    --   the rule (based on Vigor,       --
-    --   Spirit, or Lowest of Spirit or --
-    --   Vigor).                         --
-    -------------------------------------*/
+    // Sheet managed at https://trello.com/b/yJHOPR22/swade-tabbed-roll20-sheet and the Roll20 QA test game
 
     // Better Logging Functionality
     const log = (title, text, color = 'green', headerstyle = 'font-size:14px; font-weight:bold;', bodystyle = 'font-size:12px; font-weight:normal;') => {
@@ -1507,7 +1500,7 @@
 	});
 
 	const calcStrain = function() {
-	    repeatingSimpleSum('augmentation','augStrain','totalStrain');
+	    repeatingSimpleSumWCheck('augmentation','augStrain','totalStrain','augenable','on');
 	}
 
 	// Calculate Strain
@@ -7082,7 +7075,8 @@
     						<h4 class="sheet-repeatingHeader sheet-augdetails" data-i18n="details">Details</h4>
     					    <fieldset class="repeating_augmentation">
     					        <div class="sheet-augrow">
-        					        <input type="text" class="sheet-augitem" name="attr_augment" title="@{repeating_augmentation_$#_augment}" data-i18n-placeholder="augmentation" placeholder="Augmentation" style="width:200px;"/>
+									<input type="checkbox" class="sheet-augenable" name="attr_augEnable" title="@{repeating_augmentation_$#_augEnable}" value='on' checked />
+									<input type="text" class="sheet-augitem" name="attr_augment" title="@{repeating_augmentation_$#_augment}" data-i18n-placeholder="augmentation" placeholder="Augmentation" style="width:200px;"/>
         							<input type="number" class="sheet-augstrain" name="attr_augStrain" title="@{repeating_augmentation_$#_augStrain}" style="width:50px;" value="0" />
         							<textarea class="sheet-augdetails" name="attr_augDeets" title="@{repeating_augmentation_$#_augDeets}"></textarea>
     					        </div>
