--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -5823,7 +5823,8 @@
                         </div>
                     </div>
                     <div class='sheet-atts'>
-    					<h4 class='sheet-sectionHeading' data-i18n="health">Health</h4>
+						<h4 class='sheet-sectionHeading' data-i18n="health">Health</h4>
+						<input type='checkbox' class="sheet-showconditions" name='attr_showconditions' style="display: none;" checked>
     					<div class='sheet-conditions'>
     					    <div class="sheet-distracted">
 								<label class="sheet-conditionlabel">
