--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -1,4 +1,4 @@
-<input type='hidden' name='attr_character_sheet' value='Savage Worlds Tabbed v3.89' />
+<input type='hidden' name='attr_character_sheet' value='Savage Worlds Tabbed v4.00.00' />
 <script type="text/worker">
  
     // Sheet managed at https://trello.com/b/yJHOPR22/swade-tabbed-roll20-sheet and the Roll20 QA test game
@@ -439,10 +439,10 @@
 
 	/* ---- Begin Sheet Version Validation & Update ---- */
 
-	const sheetVersion = "3.10";
+	const sheetVersion = "4.00.00";
 	const sheetVersionPrefix = "Savage Worlds Tabbed v";
 
-    const upgradeSheet = function(version) {
+    const upgradeSheet = function(version, versionone, versiontwo, versionthree) {
 	    if (version < 3.0) {
             console.log("+++ Upgrading to version 3.0 +++");
 	        //migrate old fields to new
@@ -722,7 +722,7 @@
                 }
             });
         }
-        if (version < 3.9) {
+        if (versionone < 4) {
             /*const deltas = ['agility_delta','smarts_delta','spirit_delta','strength_delta','vigor_delta','fighting_delta','academicsskill_delta','athletics_delta','battle_delta','boating_delta','climbing_delta','commonknowledge_delta','driving_delta','electronics_delta','faith_delta','focus_delta','gambling_delta','guts_delta','hacking_delta','healing_delta','intimidation_delta','investigation_delta','language_delta','lockpicking_delta','notice_delta','occult_delta','performance_delta','persuasion_delta','piloting_delta','psionics_delta','repair_delta','research_delta','riding_delta','ritual_delta','science_delta','shooting_delta','spellcasting_delta','stealth_delta','streetwise_delta','survival_delta','swimming_delta','taunt_delta','throwing_delta','thievery_delta','tracking_delta','weirdscience_delta','repeating_skills:skillnamerank_delta','pastrength_delta','rastrength_delta'];
             deltas.forEach(delta => {
                 let deltatrait = `${delta}`;
@@ -733,14 +733,6 @@
                 setAttrs({sattrs});
             });*/
             //Update Sheet Version Number
-            console.log("**** Updating Sheet Version ****");
-            setAttrs({
-                newcontent: "unread",
-                newdocumentation: "unread",
-                character_sheet: sheetVersionPrefix + sheetVersion
-            });
-        }
-        if (version < 3.10) {
             console.log("**** Updating Sheet Version ****");
             setAttrs({
                 newcontent: "unread",
@@ -762,8 +754,11 @@
         }*/
         console.log("<===== Begin Sheet Upgrade Conversion Process =====>");
         console.log("Sheet Version: " + v.character_sheet.slice(22));
-        const version = parseFloat(v.character_sheet.slice(22)) || 0;
-        upgradeSheet(version);
+		const version = parseFloat(v.character_sheet.slice(22)) || 0;
+		const versionone = parseInt(v.character_sheet.slice(22)) || 0;
+		const versiontwo = parseInt(v.character_sheet.slice(24)) || 0;;
+		const versionthree = parseInt(v.character_sheet.slice(27)) || 0;
+        upgradeSheet(version, versionone, versiontwo, versionthree);
       });
     });
 	/* ---- End Sheet Version Validation & Update ---- */
