--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6220,9 +6220,9 @@
 							<input type="checkbox" class="sheet-useStreetCredThree" style="display: none;" name="attr_izStreetCredThree" />
 							<div class="sheet-basederived sheet-StreetCredThree">
     					        <div class="sheet-derivelabel"><button class="sheet-traitbutton sheet-deriveflexbutton" type='roll' name='roll_StreetCredThreeRoll' value="@{rollstreetcredthree}" data-i18n="street-cred">&nbsp;Street Cred</button></div>
-								<select name="attr_streetcredthree" title="@{StreetCredThree}" class="sheet-derivebaseplus" value="d6">
+								<select name="attr_streetcredthree" title="@{StreetCredThree}" class="sheet-derivebaseplus">
 									<option value="d4">d4</option>
-									<option value="d6">d6</option>
+									<option value="d6" selected>d6</option>
 									<option value="d8">d8</option>
 									<option value="d10">d10</option>
 									<option value="d12">d12</option>
