Attach an attribute to the notes text area
Fixes problem with notes not being persisted.

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -934,7 +934,7 @@
     <div>
         <h3 class="sheet-divide">NOTES</h3>
         <br>
-        <textarea></textarea>
+        <textarea name="attr_charnotes"></textarea>
     </div>
 </div>
 <div class="page2tab">
