[Drakar och Demoner 6.0] Removed sample text.

--- a/Drakar och Demoner 6.0/Drakar_och_Demoner_6_0.html
+++ b/Drakar och Demoner 6.0/Drakar_och_Demoner_6_0.html
@@ -13,7 +13,7 @@
                 <div class="sheet-col">
                     <table>
                         <tr>
-                            <td><button class="sheet-roll_alternate3" type="roll" style="width: 50px; height: 45px; font-weight: bolder; font-size: 32;" name="roll_styr" value="&{template:DoDFardighet} {{name=Styrka}} {{slag=[[1d20]]}} {{fardighet=[[@{sty}+?{Övrig modifierare|0}]]}} {{text=hej mitt vinterland, nu är jag här. hej mitt vinterland, nu är jag här.}} {{text2=hej mitt vinterland, nu är jag här. hej mitt vinterland, nu är jag här.}}">STY</button></td>
+                            <td><button class="sheet-roll_alternate3" type="roll" style="width: 50px; height: 45px; font-weight: bolder; font-size: 32;" name="roll_styr" value="&{template:DoDFardighet} {{name=Styrka}} {{slag=[[1d20]]}} {{fardighet=[[@{sty}+?{Övrig modifierare|0}]]}}">STY</button></td>
                             <td><input type="number" style="width: 50px; height: 50px; font-weight: bolder; font-size: 20px; text-align: center" min="0" name="attr_sty" class="sheet-grundegenskapstabell"></td>
                             <td><button class="sheet-roll_alternate3" type="roll" style="width: 50px; height: 45px; font-weight: bolder; font-size: 32;" name="roll_fysr" value="&{template:DoDFardighet} {{name=Fysik}} {{slag=[[1d20]]}} {{fardighet=[[@{fys}+?{Övrig modifierare|0}]]}}">FYS</button></td>
                             <td><input type="number" style="width: 50px; height: 50px; font-weight: bolder; font-size: 20px; text-align: center" min="0" name="attr_fys" class="sheet-grundegenskapstabell"></td>
