--- a/Torg Eternity/Torg Eternity.html
+++ b/Torg Eternity/Torg Eternity.html
@@ -20,7 +20,7 @@
         <input type="hidden" name="attr_previous-result" value="@{trackerprefix}@{selected|token_name}}" />
         <button type="roll" class="hidden" name="result-possibility" value="&{template:possibility} {{previousroll=@{previous-result}}} {{newroll=[[@{previous-result}+({1d20!10!!20cs10cs,10 + 0d0}kh1) @{rolltracker}]]}} @{rollspecial}"></button>
         <button type="roll" class="hidden" name="result-up" value="&{template:possibility} {{previousroll=@{previous-result}}} {{newroll=[[@{previous-result}+(1d20!10!!20cs10cs) @{rolltracker}]]}} @{rollspecial}"></button>
-        <button type="roll" class="hidden" name="result-bonusdie" value="&{template:coupdegras} {{neweffect=[[@{previous-result} + 1d6!p @{rolltracker}]]}} @{rollspecialdamage}"></button>
+        <button type="roll" class="hidden" name="result-bonusdie" value="&{template:coupdegrace} {{neweffect=[[@{previous-result} + 1d6!p @{rolltracker}]]}} @{rollspecialdamage}"></button>
     </label>
 </div>
 
@@ -605,7 +605,7 @@
 			        </tbody>
 		        </table>
 		    </fieldset>
-		    <td>Coup De Gras <button type="roll" name="coupdegras" value="&{template:coupdegras} {{neweffect=[[?{Previous Effect} + 1d6!p + 0d0]]}}" /></td>
+		    <td>Coup De Grace <button type="roll" name="coupdegrace" value="&{template:coupdegrace} {{neweffect=[[?{Previous Effect} + 1d6!p + 0d0]]}}" /></td>
         </div>
 	</div>
 	<br>
@@ -1561,9 +1561,9 @@
     </table>
 </rolltemplate>
 
-<rolltemplate class="sheet-rolltemplate-coupdegras">
+<rolltemplate class="sheet-rolltemplate-coupdegrace">
     <table>
-        <tr><th>Coup De Gras</th></tr>
+        <tr><th>Coup De Grace</th></tr>
         <tr><td><span class="tcat">New Effect: </span>{{neweffect}}</td></tr>
 
         {{#rollBetween() neweffect -5 -1}}
