--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
@@ -188,7 +188,7 @@
 		<div class="sheet-row">
 			<div class="sheet-col-1">
 				<h4 class="sheet-center">
-					<span >Quick Actions</span>
+					<span >Combat Actions</span>
 				</h4>
 			</div>
 		</div>
@@ -214,7 +214,7 @@
 					</button>
 				</div>
 			</div>
-			<div class="sheet-col-1-9 sheet-center sheet-pad-r-md">
+			<div class="sheet-col-1-10 sheet-center sheet-pad-r-md">
 				<div class="sheet-col-1 sheet-center sheet-pad-r-sm">
 					<button type="roll" class="sheet-roll" name="roll_CriticalRoll" value="@{Whisper} &{template:whfrp2e} {{title=Critical Roll}} {{character_name=@{character_name}}} {{attacktype=^{CRITICAL}}} {{critlocation=[[?{Hit Location|Head,1|Right Arm,2|Left Arm,3|Body,4|Right Leg,5|Left Leg,6}+?{@{translation_modifier}|0}]]}} {{critroll=[[[[1d100]]]]}}">
 						<span data-i18n="CRITICAL-HIT">Critical Hit</span>
@@ -228,7 +228,7 @@
 					</button>
 				</div>
 			</div>
-			<div class="sheet-col-1-9 sheet-center">
+			<div class="sheet-col-1-10 sheet-center">
 				<div class="sheet-col-1 sheet-center sheet-pad-r-sm">
 					<button type="roll" class="sheet-roll" name="roll_AmputationTest" value="@{Whisper} &{template:whfrp2e} {{title=^{AMPUTATION}}} {{character_name=@{character_name}}} {{attacktype=^{CRITICAL}}} {{amputationroll=true}} {{test=[[1d100]]}} {{target=[[@{Endurance}+?{@{translation_modifier}|0}]]}}">
 						<span data-i18n="AMPUTATION">Amputation</span>
@@ -5033,7 +5033,7 @@
 								<div class="sheet-center sheet-small-label sheet-pad-b-sm">
 									<span data-i18n="TARGET">Target</span>
 								</div>
-								<input type="text" class="sheet-center" name="attr_spelltarget" />
+								<input type="text" class="sheet-center" name="attr_spelltarget" value="0" />
 							</div>
 							<div class="sheet-col-1-5 sheet-center sheet-vert-middle sheet-pad-r-sm">
 								<div class="sheet-center sheet-small-label sheet-pad-b-sm">
@@ -5075,7 +5075,7 @@
 								<div class="sheet-center sheet-small-label sheet-pad-b-sm">
 									<span data-i18n="CASTING-NUMBER">CN</span>
 								</div>
-								<input type="text" class="sheet-center" name="attr_spellcastingnumber" />
+								<input type="text" class="sheet-center" name="attr_spellcastingnumber" value="0" />
 							</div>
 							<div class="sheet-col-1-10 sheet-center sheet-vert-middle sheet-pad-l-sm sheet-pad-r-sm">
 								<div class="sheet-center sheet-small-label sheet-pad-b-sm">
@@ -5105,7 +5105,7 @@
 								<div class="sheet-center sheet-small-label sheet-pad-b-sm">
 									<span data-i18n="DAMAGE">Damage</span>
 								</div>
-								<input type="text" class="sheet-center" name="attr_spelldamage" />
+								<input type="text" class="sheet-center" name="attr_spelldamage" value="0" />
 							</div>
 							<div class="sheet-col-1-10 sheet-spell-button-group sheet-right">
 								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{ARCANE-SPELL}}} {{spellrange=@{spellrange}}} {{spelltarget=@{spelltarget}}} {{spellduration=@{spellduration}}} {{target=[[{@{Intelligence}}+{@{LangMagickAdv}}+{@{LangMagickMisc}}+(@{Advantage}*10)+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]] - [[@{spellchannelsl}]] Ch SL = [[@{spellcastingnumber}-@{spellchannelsl}]]}} {{spelldescription=@{spelldescription}}} {{test=[[1d100cs01cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
@@ -5185,7 +5185,7 @@
 								<div class="sheet-center sheet-small-label sheet-pad-b-sm">
 									<span data-i18n="DAMAGE">Damage</span>
 								</div>
-								<input type="text" class="sheet-center" name="attr_spelldamage" />
+								<input type="text" class="sheet-center" name="attr_spelldamage" value="0" />
 							</div>
 							<div class="sheet-col-1-10 sheet-spell-button-group sheet-right">
 								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{DIVINE-SPELL}}} {{spellrange=@{spellrange}}} {{spelltarget=@{spelltarget}}} {{spellduration=@{spellduration}}} {{target=[[{@{Fellowship}}+{@{PrayAdv}}+{@{PrayMisc}}+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]]}} {{spelldescription=@{spelldescription}}} {{test=[[1d100cs01cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
