Update to AIME character sheet
Added cultural heirlooms

--- a/Adventures in Middle Earth/Adventures in Middle Earth.html
+++ b/Adventures in Middle Earth/Adventures in Middle Earth.html
@@ -1743,7 +1743,8 @@
                                     <select name="attr_source">
                                         <option selected="selected" data-i18n="racial">Cultural</option>
                                         <option data-i18n="class">Class</option>
-                                        <option data-i18n="cv">Virtue</option>
+<option data-i18n="heirloom">Cultural Heirloom</option>
+                                        <option data-i18n="cv">Cultural Virtue</option>
                                         <option data-i18n="feat">Feat</option>
                                         <option data-i18n="background">Background</option>
                                         <option data-i18n="other">Other</option>
@@ -3820,11 +3821,11 @@
             </div>
             <div class="bottom">
                 <div class="hlabel-container">
-                    <input type="text" name="attr_race">
+                    <input type="text" name="attr_culture">
                     <span class="label" data-i18n="culture-u">CULTURE</span>
                 </div>
                 <div class="hlabel-container">
-                    <input type="text" name="attr_alignment">
+                    <input type="text" name="attr_shadow_weakness">
                     <span class="label" data-i18n="shadow-weakness-u">SHADOW WEAKNESS</span>
                 </div>
                 <div class="hlabel-container">
