Stargate: v0.2; image, minor ajustments

--- a/Stargate-RPG/stargate.html
+++ b/Stargate-RPG/stargate.html
@@ -62,7 +62,7 @@
 
 <!-- ATTRIBUTES SECTION -->
 
-  <div class="attr section columnflex nowrap spaced center">
+  <div class="attr columnflex nowrap spaced center">
     <div class="stat columnflex nowrap center middle">
       <span>STR</span>
       <input name="attr_str" type="number" value="10">
@@ -102,61 +102,61 @@
   <div class="skills section columnflex nowrap spaced">
     <h3>Skills</h3>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_acrobatics_c" type="checkbox" value="">
       <span name="attr_acrobatics" class="mod"></span>
       <span>Acrobatics(dex)</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_animalhandling_c" type="checkbox" value="">
-      <span name="attr_animalhandling" class="mod"></span>
+      <span name="attr_animalhandling" class="mod" style="width: 30px;"></span>
       <span>animal handling(wis)</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_athletics_c" type="checkbox" value="">
       <span name="attr_athletics" class="mod"></span>
       <span>athletics(str)</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_culture_c" type="checkbox" value="">
       <span name="attr_culture" class="mod"></span>
       <span>culture(wis)</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_deception_c" type="checkbox" value="">
       <span name="attr_deception" class="mod"></span>
       <span>deception(cha)</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_engineering_c" type="checkbox" value="">
       <span name="attr_engineering" class="mod"></span>
       <span>engineering(int</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_history_c" type="checkbox" value="">
       <span name="attr_history" class="mod"></span>
       <span>history(int)</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_insight_c" type="checkbox" value="">
       <span name="attr_insight" class="mod"></span>
       <span>insight(wis)</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_intimidation_c" type="checkbox" value="">
       <span name="attr_intimidation" class="mod"></span>
       <span>intimidation</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_investigation_c" type="checkbox" value="">
       <span name="attr_investigation" class="mod"></span>
       <span>investigation</span>
@@ -164,61 +164,61 @@
 
 
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_medicine_c" type="checkbox" value="">
       <span name="attr_medicine" class="mod"></span>
       <span>medicine</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_nature_c" type="checkbox" value="">
       <span name="attr_nature" class="mod"></span>
       <span>nature</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_perception_c" type="checkbox" value="">
       <span name="attr_perception" class="mod"></span>
       <span>perception</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_performance_c" type="checkbox" value="">
       <span name="attr_performance" class="mod"></span>
       <span>performance</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_percuation_c" type="checkbox" value="">
       <span name="attr_percuation" class="mod"></span>
       <span>percuation</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_pilot_c" type="checkbox" value="">
       <span name="attr_pilot" class="mod"></span>
       <span>pilot</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_science_c" type="checkbox" value="">
       <span name="attr_science" class="mod"></span>
       <span>science</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_sleight_c" type="checkbox" value="">
       <span name="attr_sleight" class="mod"></span>
       <span>sleight</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_stealth_c" type="checkbox" value="">
       <span name="attr_stealth" class="mod"></span>
       <span>stealth</span>
     </div>
 
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_survival_c" type="checkbox" value="">
       <span name="attr_survival" class="mod"></span>
       <span>survival</span>
@@ -231,7 +231,7 @@
 
   <div class="hp rowflex nowrap">
     <div class="section columnflex nowrap middle center">
-      <label class="bold">HP</label>
+      <label class="bold txtcenter">HP</label>
       <input name="attr_hp" type="number" value="20" class="stat">
     </div>
     <div class="section columnflex nowrap middle center">
@@ -288,7 +288,7 @@
       <input name="attr_init" type="number" value="0" class="stat">
     </div>
     <div class="section columnflex nowrap middle center">
-      <label class="bold">Moxie</label>
+      <label class="bold txtcenter">Moxie</label>
       <input name="attr_moxie" type="number" value="0" class="stat">
     </div>
   </div>
