--- a/Stargate-RPG/stargate.html
+++ b/Stargate-RPG/stargate.html
@@ -231,12 +231,12 @@
 
   <div class="hp rowflex nowrap">
     <div class="section columnflex nowrap middle center">
-      <label class="bold txtcenter">HP</label>
-      <input name="attr_hp" type="number" value="20" class="stat">
+      <label class=" txtcenter">HP</label>
+      <input name="attr_hp" type="number" value="20" class="stat w40">
     </div>
     <div class="section columnflex nowrap middle center">
-      <label class="bold">determination</label>
-      <input name="attr_determination" type="number" value="" class="stat">
+      <label class="">determination</label>
+      <input name="attr_determination" type="number" value="" class="stat w40">
     </div>
   </div>
 
@@ -280,16 +280,16 @@
 
   <div class="prof rowflex nowrap">
     <div class="section columnflex nowrap middle center">
-      <label class="bold wide">Prof Bonus</label>
-      <input name="attr_prof" type="number" value="2" class="stat">
+      <label class="wide">Prof Bonus</label>
+      <input name="attr_prof" type="number" value="2" class="stat w40">
     </div>
     <div class="section columnflex nowrap middle center">
-      <label class="bold">Initiative</label>
-      <input name="attr_init" type="number" value="0" class="stat">
+      <label class="txtcenter">Initiative</label>
+      <input name="attr_init" type="number" value="0" class="stat w40">
     </div>
-    <div class="section columnflex nowrap middle center">
-      <label class="bold txtcenter">Moxie</label>
-      <input name="attr_moxie" type="number" value="0" class="stat">
+    <div class="section columnflex nowrap middle center moxie">
+      <label class="txtcenter">Moxie</label>
+      <input name="attr_moxie" type="number" value="0" class="stat w40">
     </div>
   </div>
 
@@ -298,12 +298,12 @@
 
   <div class="ac rowflex nowrap">
     <div class="section columnflex nowrap middle center">
-      <label class="bold wide">Armor Class</label>
-      <input name="attr_ac" type="number" value="10" class="stat">
+      <label class="wide">Armor Class</label>
+      <input name="attr_ac" type="number" value="10" class="stat w70">
     </div>
     <div class="section columnflex nowrap middle center">
-      <label class="bold">AC extra</label>
-      <input name="attr_ac_extra" type="number" value="10" class="stat">
+      <label class="">AC extra</label>
+      <input name="attr_ac_extra" type="number" value="10" class="stat w70">
     </div>
   </div>
 
@@ -325,32 +325,32 @@
 
   <div class="saves section columnflex nowrap spaced">
     <h3>Saves</h3>
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_str_save_c" type="checkbox" value="">
       <span name="attr_str_save" class="mod"></span>
       <span class="bold">Strength</span>
     </div>
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_dex_save_c" type="checkbox" value="">
       <span name="attr_dex_save" class="mod"></span>
       <span class="bold">Dexterity</span>
     </div>
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_con_save_c" type="checkbox" value="">
       <span name="attr_con_save" class="mod"></span>
       <span class="bold">Constitution</span>
     </div>
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_int_save_c" type="checkbox" value="">
       <span name="attr_int_save" class="mod"></span>
       <span class="bold">Intelligence</span>
     </div>
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_wis_save_c" type="checkbox" value="">
       <span name="attr_wis_save" class="mod"></span>
       <span class="bold">Wisdom</span>
     </div>
-    <div class="rowflex nowrap spaced">
+    <div class="rowflex nowrap">
       <input name="attr_cha_save_c" type="checkbox" value="">
       <span name="attr_cha_save" class="mod"></span>
       <span class="bold">Charisma</span>
@@ -582,4 +582,38 @@ stats.forEach(stat => {
         });
     });
 });
+
+stats.forEach(stat => {
+    on(`change:${stat}_mod`, () => {
+        getAttrs([stat]_mod, values => {
+            const stat_mod = int(values[stat]);
+            //console.log(stat_base);
+            let stat_mod = 0;
+            if (`${stat}` === "str"){
+
+            } 
+            else if (stat_base >= 28) stat_mod = "+9";
+            else if (stat_base >= 26) stat_mod = "+8";
+            else if (stat_base >= 24) stat_mod = "+7";
+            else if (stat_base >= 22) stat_mod = "+6";
+            else if (stat_base >= 20) stat_mod = "+5";
+            else if (stat_base >= 18) stat_mod = "+4";
+            else if (stat_base >= 16) stat_mod = "+3";
+            else if (stat_base >= 14) stat_mod = "+2";
+            else if (stat_base >= 12) stat_mod = "+1";
+            else if (stat_base >= 10) stat_mod = "+0";
+            else if (stat_base >= 8) stat_mod = "-1";
+            else if (stat_base >= 6) stat_mod = "-2";
+            else if (stat_base >= 4) stat_mod = "-3";
+            else if (stat_base >= 2) stat_mod = "-4";
+            else if (stat_base <= 1) stat_mod = "-5";
+            else stat_mod = "+0";
+            
+            setAttrs({
+                [`${stat}_mod`]: stat_mod
+            });
+        });
+    });
+});
+
 </script>
