--- a/Palladium Fantasy 1E/palladium_fantasy_1e.html
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.html
@@ -104,7 +104,7 @@
             <div class='gold-grid-container'>
                 <h4 class='calc-title'>Autocalc</h4>
                 <h4 class='calc-title'>Stats</h4>
-                <h4 class='calc-label' title='Maximum Lift' >Lift lbs.</h4>
+                <h4 class='calc-label' title='Maximum Lift Weight' >Lift lbs.</h4>
                 <input class='calc-field' type="text" value="" name="attr_lift" readonly>
                 <h4 class='calc-label' title='Maximum Carrying Weight' >Carry lbs.</h4>
                 <input class='calc-field' type="text" value="" name="attr_carry" readonly>
@@ -327,8 +327,21 @@
                     </div>
                 </fieldset>
             </div>
-        </div> 
+        </div>
+        <h4>Warning</h4>
+        <h5>Upcoming changes to the melee and ranged repeating attacks section:</h5>
+        <ul>
+            <li>I will be removing the temporary bonus field from the repeating section to declutter the line.</li>
+            <li>Since I originally intended for these to be used for short term magic effects, they should have been set up as <br>
+            global bonuses to begin with. There will be global bonuse fields for Strike, Parry, and Damage that only affect the <br>
+            Melee section.  There will be a Strike and Damage bonus that will only affect the Ranged section.  That should make <br>
+            short term bonuses easier to add and remove.</li>
+            <li>With this change, the attributes that the roll buttons look for will change.  Any bonuses in the current repeating <br>
+		temp bonus fields will be lost.</li>
+            <li>I intend to make this change in a couple weeks, so prepare accordingly!</li>
+        </ul>
     </div>
+    <!--Character Sheet Tab-->
     <div class='sheet-social'>
         <h1>Social Information</h1>
         <div class='physical-grid-container'>
@@ -362,8 +375,11 @@
             <textarea class='mental-field' value="" name="attr_character_hostility" placeholder='Hostilities, pet peeves, likes and dislikes' /></textarea>
             <h4 class='mental-label'>Insanity</h4>
             <textarea class='mental-field' value="" name="attr_character_insanity" placeholder='Hope this placeholder never gets replaced...' /></textarea>
+            <h4 class='mental-label'>O.C.C. Notes</h4>
+            <textarea class='mental-field' value="" name="attr_character_occnotes" placeholder='Anything about your character's occupation(s) that needs kept in mind' /></textarea>
         </div> 
     </div>
+    <!--Character Sheet Tab-->
     <div class='sheet-skill'>
         <h1>Skills</h1>
         <div class='universalrow-grid-container'>
@@ -469,6 +485,7 @@
             </div>
         </div> 
     </div>
+    <!--Character Sheet Tab-->
     <div class='sheet-combat'>
         <h1>Combat</h1>
         <div class="melee-proficiency-panel">
@@ -641,10 +658,15 @@
                     <h5>ME Insanity Bonus</h5>
                     <input class='bonus-field' type="text" value="" title="@{me_insanity}" name="attr_me_insanity" readonly>
                     <div class='space-holder'></div>
+                    
+                    <div class="save-notes-container" >
+                        <textarea class='save-misc' value='' name='attr_save_notes' title='@{save_notes}' placeholder='Notes displayed with all saves except coma/death.' ></textarea>
+                    </div>
                 </div>
             </div>
         </div> 
     </div>
+    <!--Character Sheet Tab-->
     <div class="sheet-equipment">
         <h1>Equipment</h1>
         <div class='encumbrance-panel'>
@@ -785,6 +807,7 @@
             </div>
         </div>
     </div>
+    <!--Character Sheet Tab-->
     <div class="sheet-journal">
         <h1>Notes</h1>
         <div class="note-one-panel">
@@ -830,15 +853,21 @@
             </div>
         </div> 
     </div>
+    <!--Character Sheet Tab-->
     <div class="sheet-release">
         <h1>Sheet Version: 1.0</h1>
-        <h5>Recent Changes:</h5>
+        <h5>January 12, 2020</h5>
         <ul>
-	    <li>Toggles have been added for the mounted parry/dodge, damage, and charge damage to be included in the melee attack macros.</li>
-	    <li>The parry/dodge toggle will add the mounted dodge bonus to the dodge roll button macro, so no more query when dodging.</li>
+            <li>Added a notes field to the saving throw section for situational bonuses that aren't specific to a certain type of effect (like protective wards).</li>
+            <li>Added a field on the social tab for class related notes.</li>
+        </ul>
+        <h5>Older Changes:</h5>
+        <ul>
+    	    <li>Toggles have been added for the mounted parry/dodge, damage, and charge damage to be included in the melee attack macros.</li>
+    	    <li>The parry/dodge toggle will add the mounted dodge bonus to the dodge roll button macro, so no more query when dodging.</li>
             <li>The sheet tabs have been altered to run on sheetworkers.</li>
             <li>The repeating attack entries on the statistics tab are now all text instead of number to allow entry of attributes instead of only numbers.  
-            This allows the use of repeating section attributes to pull numbers from the weapon proficiencies on the combat tab.</li>
+                This allows the use of repeating section attributes to pull numbers from the weapon proficiencies on the combat tab.</li>
             <li>If there are any issues with the sheetworker tabs, I will revert back to a regular tab system.</li>
             <li>Hopefully this will be the final stabile version of this sheet.</li>
         </ul>
