--- a/Palladium Fantasy 1E/palladium_fantasy_1e.html
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.html
@@ -376,7 +376,7 @@
             <h4 class='mental-label'>Insanity</h4>
             <textarea class='mental-field' value="" name="attr_character_insanity" placeholder='Hope this placeholder never gets replaced...' /></textarea>
             <h4 class='mental-label'>O.C.C. Notes</h4>
-            <textarea class='mental-field' value="" name="attr_character_occnotes" placeholder='Anything about your character's occupation(s) that needs kept in mind' /></textarea>
+            <textarea class='mental-field' value="" name="attr_character_occnotes" placeholder='Anything about your character occupation(s) that needs kept in mind' /></textarea>
         </div> 
     </div>
     <!--Character Sheet Tab-->
